venndb-usage/tests/fails/unknown_attr_field.rs
use venndb::VennDB;

#[derive(Debug, VennDB)]
struct Employee {
    #[venndb(foo)]
    id: u32,
}

fn main() {}
