venndb-usage/tests/fails/unknown_attr_field.stderr
error: Invalid field-level `venndb` attribute
       Expected one of: `key`
 --> tests/fails/unknown_attr_field.rs:5:14
  |
5 |     #[venndb(foo)]
  |              ^^^
